Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!


* Verilator 4.005 devel


* Verilator 4.004 2018-10-6

**    Add GTKWave FST native tracing, bug1356. [Sergi Granell]
      (Verilator developers need to pull the latest vcddiff.)

***   Support $past. [Dan Gisselquist]

***   Support restrict, bug1350. [Clifford Wolf]

***   Rename include/lxt2 to include/gtkwave.

****  Fix replication of 64-bit signal change detects.

****  Fix Mac OSX 10.13.6 / LLVM 9.1 compile issues, bug1348. [Kevin Kiningham]

****  Fix MinGW compile issues, msg2636. [HyungKi Jeong]


* Verilator 4.002 2018-09-16

**    This is a major release.  Any patches may require major rework to apply.
      [Thanks everyone]

**    Add multithreaded model generation.

**    Add runtime arguments.

**    Add GTKWave LXT2 native tracing, bug1333. [Yu Sheng Lin]

**    Note $random has new algorithm; results may vary vs. previous versions.

***   Better optimize large always block splitting, bug1244. [John Coiner]

***   Add new reloop optimization for repetitive assignment compression.

***   Support string.atoi and similar methods, bug1289. [Joel Holdsworth]

****  Fix internals to be C++ null-pointer-check clean.

****  Fix internals to avoid 'using namespace std'.

****  Fix Verilation performance issues, bug1316. [John Coiner]

****  Fix clocker attributes to not propagate on concats. [John Coiner]

****  Fix first clock edge and --x-initial-edge, bug1327. [Rupert Swarbrick]

****  Fix compile error on tracing of string arrays, bug1338. [Iztok Jeras]

****  Fix number parsing with newline after radix, bug1340. [George Cuan]

****  Fix string ?: conditional type resolution, bug1345. [Iztok Jeras]

****  Fix duplicate symbol error on generate tri, bug1347. [Tomas Dzetkulic]


* Verilator 3.926 2018-08-22

****  Add OBJCACHE envvar support to examples and generated Makefiles.

****  Change MODDUP errors to warnings, msg2588. [Marshal Qiao]
