@@ -1,5 +1,5 @@
 $date
-	Sun Oct  7 21:45:42 2018
+	Mon Oct  8 07:13:11 2018
 
 $end
 $version
@@ -33,7 +33,10 @@ $var real 64 3 v_real $end
 $var real 64 4 v_arr_real(0) $end
 $var real 64 5 v_arr_real(1) $end
 $var logic 64 6 v_str32x2 $end
+$attrbegin misc 07 t.enumed_t 4 ZERO ONE TWO THREE 00000000000000000000000000000000 00000000000000000000000000000001 00000000000000000000000000000010 00000000000000000000000000000011 1 $end
+$attrbegin misc 07 "" 1 $end
 $var logic 32 7 v_enumed $end
+$attrbegin misc 07 "" 1 $end
 $var logic 32 8 v_enumed2 $end
 $scope module unnamedblk1 $end
 $var integer 32 9 b $end
