@@ -5,6 +5,11 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 * Verilator 4.005 devel
 
+***   For --trace-fst, save enum decoding information, bug1358. [Sergi Granell]
+      (To visualize enumeration data you must use GTKwave 3.3.95 or newer.)
+
+***   For --trace-fst, instead of *.fst.hier, put data into *.fst. [Tony Bybell]
+
 
 * Verilator 4.004 2018-10-6
 
